@@ -97,7 +97,7 @@ public static function define_setting_value ($settings) {}
 
 $notations['guido'] = array (
 	'name'        => 'GUIDO',
-	'url'         => 'http://www.informatik.tu-darmstadt.de/AFS/GUIDO/',
+	'url'         => 'http://scorerender.abelcheung.org/demo/demo-guido/',
 	'regex'       => '~\[guido\](.*?)\[/guido\]~si',
 	'starttag'    => '[guido]',
 	'endtag'      => '[/guido]',
