@@ -194,7 +194,7 @@ public static function define_setting_value ($settings)
 
 $notations['lilypond'] = array (
 	'name'        => 'LilyPond',
-	'url'         => 'http://www.lilypond.org/',
+	'url'         => 'http://scorerender.abelcheung.org/demo/demo-lilypond/',
 	'regex'       => '~\[lilypond\](.*?)\[/lilypond\]~si',
 	'starttag'    => '[lilypond]',
 	'endtag'      => '[/lilypond]',
